--- a/ART.html
+++ b/ART.html
@@ -1,17 +1,34 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>someone</title>
-    <link rel="stylesheet" href="ET.css">
-    <link rel="stylesheet" href="nav.css">
-</head>
-<body>
-<h1>ART</h1>
-<p> </p>
-<h2>SYMMETRY</h2>
-<img src="ART.png" height="100px">
-<P>I made this project in ART. This project represent symmetry. </p>
-<a href="index.html" class="index">home</a>
-</body>
+<!DOCTYPE html> 
+<html lang="en"> 
+ 
+<head> 
+    <meta charset="UTF-8"> 
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+    <title>someone</title> 
+    <link rel="stylesheet" href="ART.css"> 
+    <link rel="stylesheet" href="nav.css"> 
+</head> 
+ 
+<body> 
+    <h1>Art</h1>
+    <div class= "box"> 
+        <h2>symmetry</h2> 
+        <div> 
+            <img src="SYMMETRY.png" height="250px"> 
+        </div> 
+        <p> 
+            I drew this in art class, it is a symmetry drawing. 
+            A symmetry is a that has two same sides. 
+            I used an app called sketchbook to draw this drawing. 
+            In the app I used a thing that makes two sides the same. 
+            I enjoyed drawing all the circles, it made me relax. 
+            If I could do this again I will put in more colors. 
+        </p> 
+    </div> 
+
+    <div>
+        <a href="index.html" class="index">HOME</a> 
+        <a href="subject.html" class="subject">SUBJECT</a> 
+    </div>
+    
+</body> 
