--- a/ET.html
+++ b/ET.html
@@ -7,12 +7,51 @@
     <link rel="stylesheet" href="ET.css">
     <link rel="stylesheet" href="nav.css">
 </head>
+
 <body>
-<h1>ET</h1>
-<p> </p>
-<h2>3D MODEL</h2>
-<img src="p.png" height="80px">
-<P>I made a pencil in tincarCAD.</p>
-<p>This was practis for 3D modeling.</P>
-<a href="index.html" class="index">home</a>
+    <h1>ET</h1>
+    <div class= "box">  
+        <h2>3D Pencil</h2>
+        <div>
+            <img src="p.png" height="150px">
+        </div>
+        <p>
+            I made this 3D pencil using a website called Tinkercad. 
+            When I want to print this model I can copy the link of the model and put it on a 3D printer, altho I did not print it. 
+            I think one of my struggles was that the cone, 
+            the part that the color came out, did not line up very well.
+        </p>
+    </div>
+
+    <div class="box">
+        <h2>Worm</h2>
+        <Div>
+            <img src="worm.HEIC" height="200px">
+        </Div>
+        <p>
+            I made this 3D worm in ET class. 
+            I printed this worm in tinkercad and then built the secret from microbit. 
+            I made an arm to push the front of the worm so it can move but it can only front. 
+            In the code I made it to turn the arm every 1 second it was very slow. 
+            I struggled with the worm moving because it moved but did not go forward so I put double sided tape to make it stick on the ground. 
+            If I do this again I will make it bigger and faster.
+        </p>
+    </div>
+
+    <div class="box">
+        <h2>bishop</h2>
+        <Div>
+            <img src="chess.png" height="200px">
+        </Div>
+        <p>
+            I made this bishop in ET with tinkercad. 
+            Tinkercad is a website where we can make 3D models. 
+            It was a little hard making the face because it is a circle and a triangle together. 
+            When I was making this project I only looked at a picture and made it. 
+            I really enjoyed making it because it was fun watching the picture and making it. 
+            if i can make it again I will make the bottom smaller. 
+        </p>
+    </div>
+
+    <div><a href="index.html" class="index">home</a></div>
 </body>
