--- a/subject.html
+++ b/subject.html
@@ -1,29 +1,31 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>someone</title>
-    <link rel="stylesheet" href="subject.css">
-    <link rel="stylesheet" href="nav.css">
-</head>
-<body>
-    <div class="header"></div>
-    <h1>subject</h1>
-    <div class="navr"></div>
-    <a href="science.html"><div class="science"><img src="science.png" height="80px"><p>Science</p></div></a>
-    <a href="ART.html"><div class="ART"><img src="ART.png" height="80px"><p>ART</p></div></a>
-    <a href="music.html"><div class="music"><img src="music.jpg" height="80px"><p>Music</p></div></a>
-    <a href="ET.html"><div class="ET"><img src="ET.png" height="80px"><p>ET</p></div></a>
-    
-    
-    <div class="content"></div>
-    <div class="footer"></div>
-
-
-
-
-    <a href="index.html" class="index">home</a>
-  
-</body>
-</html>
+<!DOCTYPE html> 
+<html lang="en"> 
+ 
+<head> 
+ 
+    <meta charset="UTF-8"> 
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+    <title>someone</title> 
+    <link rel="stylesheet" href="subject.css"> 
+    <link rel="stylesheet" href="nav.css"> 
+ 
+</head> 
+ 
+<body> 
+ 
+    <div class="header"> 
+        <h1>subject</h1> 
+        </div> 
+            <a href="science.html"><div class="science"><img src="science.png" height="80px"><p>Science</p></div></a> 
+            <a href="ART.html"><div class="ART"><img src="art.png" height="80px"><p>ART</p></div></a> 
+            <a href="music.html"><div class="music"><img src="music.jpg" height="80px"><p>Music</p></div></a> 
+            <a href="ET.html"><div class="ET"><img src="ET.png" height="80px"><p>ET</p></div></a> 
+        <div class="content"> 
+        <a href="index.html" class="index">home</a> 
+    </div> 
+ 
+    <div class="footer"></div> 
+ 
+</body> 
+ 
+</html> 
